[gd_scene load_steps=7 format=3 uid="uid://blxnaohgiy7h8"]

[ext_resource type="PackedScene" uid="uid://btfwotlbgo786" path="res://Components/healthComponent.tscn" id="1_l6mbk"]
[ext_resource type="Script" path="res://Characters/CharacterTemplate/CharacterTemplate.gd" id="1_poass"]
[ext_resource type="PackedScene" uid="uid://dj1dmlygkg1r1" path="res://Components/hitboxComponent.tscn" id="2_atcq4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g6cv3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_il0uy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b7xrx"]

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("pivotY", "pivotX")]
script = ExtResource("1_poass")
pivotY = NodePath("pivotY")
pivotX = NodePath("pivotY/pivotX")
moveSpeed = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_g6cv3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_il0uy")

[node name="healthComponent" parent="." instance=ExtResource("1_l6mbk")]

[node name="hitboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("2_atcq4")]
healthComponent = NodePath("../healthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitboxComponent"]
shape = SubResource("CapsuleShape3D_b7xrx")

[node name="pivotY" type="Node3D" parent="."]

[node name="pivotX" type="Node3D" parent="pivotY"]

[node name="Camera3D" type="Camera3D" parent="pivotY/pivotX"]
